RESOLVED FIXED160201
[Threaded Compositor] ASSERTION FAILED: canAccessThreadLocalDataForThread(m_thread) after r203718
https://bugs.webkit.org/show_bug.cgi?id=160201
Summary [Threaded Compositor] ASSERTION FAILED: canAccessThreadLocalDataForThread(m_t...
Carlos Garcia Campos
Reported 2016-07-26 10:14:24 PDT
This time is because I forgot to call purgeGLResources() before invalidating the scene . . . STDERR: ASSERTION FAILED: canAccessThreadLocalDataForThread(m_thread) STDERR: ../../Source/WebCore/platform/Timer.cpp(221) : void WebCore::TimerBase::stop() STDERR: 1 0x7f29817cac2f /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x1e) [0x7f29817cac2f] STDERR: 2 0x7f298921db01 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::TimerBase::stop()+0x45) [0x7f298921db01] STDERR: 3 0x7f298921d9ce /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::TimerBase::~TimerBase()+0x2a) [0x7f298921d9ce] STDERR: 4 0x7f2987d257d0 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::Timer::~Timer()+0x3a) [0x7f2987d257d0] STDERR: 5 0x7f2989a04ac4 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::BitmapTexturePool::~BitmapTexturePool()+0x1c) [0x7f2989a04ac4] STDERR: 6 0x7f2989a04b14 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(std::default_delete<WebCore::BitmapTexturePool>::operator()(WebCore::BitmapTexturePool*) const+0x22) [0x7f2989a04b14] STDERR: 7 0x7f2989a04959 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(std::unique_ptr<WebCore::BitmapTexturePool, std::default_delete<WebCore::BitmapTexturePool> >::~unique_ptr()+0x47) [0x7f2989a04959] STDERR: 8 0x7f2989a04706 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::TextureMapper::~TextureMapper()+0x2e) [0x7f2989a04706] STDERR: 9 0x7f2989a16e59 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::TextureMapperGL::~TextureMapperGL()+0x6f) [0x7f2989a16e59] STDERR: 10 0x7f2989a16e8e /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebCore::TextureMapperGL::~TextureMapperGL()+0x18) [0x7f2989a16e8e] STDERR: 11 0x7f29882cb3c0 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(std::default_delete<WebCore::TextureMapper>::operator()(WebCore::TextureMapper*) const+0x2e) [0x7f29882cb3c0] STDERR: 12 0x7f29882c84bb /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(std::unique_ptr<WebCore::TextureMapper, std::default_delete<WebCore::TextureMapper> >::~unique_ptr()+0x47) [0x7f29882c84bb] STDERR: 13 0x7f29882c1e37 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebKit::CoordinatedGraphicsScene::~CoordinatedGraphicsScene()+0xdd) [0x7f29882c1e37] STDERR: 14 0x7f29882c1e76 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WebKit::CoordinatedGraphicsScene::~CoordinatedGraphicsScene()+0x18) [0x7f29882c1e76] STDERR: 15 0x7f29882d0036 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::ThreadSafeRefCounted<WebKit::CoordinatedGraphicsScene>::deref()+0x48) [0x7f29882d0036] STDERR: 16 0x7f29882cc66c /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(void WTF::derefIfNotNull<WebKit::CoordinatedGraphicsScene>(WebKit::CoordinatedGraphicsScene*)+0x2c) [0x7f29882cc66c] STDERR: 17 0x7f29882c8d7b /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::RefPtr<WebKit::CoordinatedGraphicsScene>::~RefPtr()+0x2f) [0x7f29882c8d7b] STDERR: 18 0x7f29882c57e2 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x584f7e2) [0x7f29882c57e2] STDERR: 19 0x7f29882c6ca6 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x5850ca6) [0x7f29882c6ca6] STDERR: 20 0x7f29882c63e2 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x58503e2) [0x7f29882c63e2] STDERR: 21 0x7f2987ccefef /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(std::_Function_base::~_Function_base()+0x33) [0x7f2987ccefef] STDERR: 22 0x7f2987ccf67a /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(std::function<void ()>::~function()+0x18) [0x7f2987ccf67a] STDERR: 23 0x7f2987d0f354 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Function<void ()>::CallableWrapper<std::function<void ()> >::~CallableWrapper()+0x2e) [0x7f2987d0f354] STDERR: 24 0x7f2987d0f390 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Function<void ()>::CallableWrapper<std::function<void ()> >::~CallableWrapper()+0x18) [0x7f2987d0f390] STDERR: 25 0x7f2987cd2dc8 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(std::default_delete<WTF::Function<void ()>::CallableWrapperBase>::operator()(WTF::Function<void ()>::CallableWrapperBase*) const+0x2e) [0x7f2987cd2dc8] STDERR: 26 0x7f2987cd0d49 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(std::unique_ptr<WTF::Function<void ()>::CallableWrapperBase, std::default_delete<WTF::Function<void ()>::CallableWrapperBase> >::~unique_ptr()+0x47) [0x7f2987cd0d49] STDERR: 27 0x7f2987ccfccc /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(WTF::Function<void ()>::~Function()+0x18) [0x7f2987ccfccc] STDERR: 28 0x7f29817e656b /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTF::RunLoop::performWork()+0x1b5) [0x7f29817e656b] STDERR: 29 0x7f29818292be /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x22812be) [0x7f29818292be] STDERR: 30 0x7f29818292e3 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x22812e3) [0x7f29818292e3] STDERR: 31 0x7f298182925e /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x228125e) [0x7f298182925e]
Attachments
Patch (1.58 KB, patch)
2016-07-26 10:16 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-07-26 10:16:30 PDT
Carlos Garcia Campos
Comment 2 2016-07-26 10:27:48 PDT
Note You need to log in before you can comment on or make changes to this bug.