[Threaded Compositor] ASSERTION FAILED: canAccessThreadLocalDataForThread(m_thread) after r203718 https://bugs.webkit.org/show_bug.cgi?id=160201

Reviewed by Michael Catanzaro.

I forgot to call purgeGLResources() before invalidating the scene in the compositing thread.

* Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::invalidate):

Canonical link: https://commits.webkit.org/178356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203727 268f45cc-cd09-0410-ab3c-d52691b4dbfc